add whatsapp CTA

--- a/home.html
+++ b/home.html
@@ -670,6 +670,12 @@
 					</div>
 				</div>
 			</section>
+			<div class="whatsapp ">
+				<a class="d-inline-flex align-items-center justify-content-center" href="https://wa.me/">
+					<span class="wsp-icon"></span>
+					<span class="wsp-label">Enviar Whatsapp</span>
+				</a>
+			</div>
 			<footer class="site-footer">
 				<div class="container">
 					<div class="row">
