change contact message placeholder

--- a/home.html
+++ b/home.html
@@ -647,7 +647,7 @@
 									<div class="col-md-12">
 										<label class="text-brown" for="message">Mensaje</label>
 										<textarea name="message" id="message" cols="30" rows="7" class="form-control"
-											placeholder="Escribe tu mensaje aqui..."></textarea>
+											placeholder="Escribí tu mensaje aquí..."></textarea>
 									</div>
 								</div>
 								<div class="row form-group">
