add some meta data to SEO

--- a/home.html
+++ b/home.html
@@ -5,6 +5,10 @@
 		<title>Fivo</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="description" 
+		content="Utiliza tu dinero en la web de manera rápida, segura y eficiente. 
+		Obten el mejor precio en un mercado libre, regido por la oferta y la demanda sin intermediarios.">
+		<meta name="keywords" content="finanzas, libres, mercado, intermediarios, precios, cambio, intercambio, divisas, rápido, eficiente">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,900" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/b0c7dcc742.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="fonts/icomoon/style.css">
@@ -616,7 +620,7 @@
 					<div class="row mb-5">
 						<div class="col-12 text-center">
 							<h2 class="section-title mb-3">Contactanos</h2>
-							<p class="text-brown-light">¿Querés saber más? Dejanos tus datos para mantenerte informado.</p>
+							<p class="text-brown-light">¿Querés saber como obtener un mejor rendimiento de tu dinero? Dejanos tus datos.</p>
 						</div>
 					</div>
 					<div class="row">
