--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
 					<div class="row banner-content">
 						<div class="col-md-8 col-lg-8 col-xl-6">
 							<h1>Evolucioná tus finanzas al siguiente nivel</h1>
-							<p class="col-xl-10 mb-4 p-0">Hacé uso de tu dinero de manera rápida, seguro y eficiente, similar a como lo hacés con la información en la web.</p>
+							<p class="col-xl-10 mb-4 p-0">Hacé uso de tu dinero de manera rápida, segura y eficiente, similar a como lo hacés con la información en la web.</p>
 							<div>
 								<a href="#contact-us" class="btn btn-accent col-xl-6 contactus">Contactar</a>
 							</div>
