--- a/home.html
+++ b/home.html
@@ -9,19 +9,33 @@
 		content="Utiliza tu dinero en la web de manera rápida, segura y eficiente. 
 		Obten el mejor precio en un mercado libre, regido por la oferta y la demanda sin intermediarios.">
 		<meta name="keywords" content="finanzas, libres, mercado, intermediarios, precios, cambio, intercambio, divisas, rápido, eficiente">
+
+		<!-- Favicon -->
+		<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+		<link rel="manifest" href="favicon/manifest.json">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+		<meta name="theme-color" content="#ffffff">
+		<!-- End Favicon -->
+
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,900&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/b0c7dcc742.js" crossorigin="anonymous"></script>
-		<!-- <link rel="stylesheet" href="fonts/icomoon/style.css"> -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<!-- <link rel="stylesheet" href="css/jquery-ui.css"> -->
-		<!-- <link rel="stylesheet" href="css/owl.carousel.min.css"> -->
-		<!-- <link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
-		<!-- <link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
-		<!-- <link rel="stylesheet" href="css/jquery.fancybox.min.css"> -->
-		<!-- <link rel="stylesheet" href="css/bootstrap-datepicker.css"> -->
-		<!-- <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css"> -->
 		<link rel="stylesheet" href="css/aos.css">
 		<link rel="stylesheet" href="css/style.css">
+
 		<!-- Google Tag Manager -->
 		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -29,6 +43,7 @@
 			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 			})(window,document,'script','dataLayer','GTM-5VB3NV3');</script>
 	<!-- End Google Tag Manager -->
+
 	</head>
 
 	<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -350,35 +365,14 @@
 							</div>
 						</div>
 					</div>
-					<!-- <div class="row pt-5 mt-5 text-center">
-						<div class="col-md-12">
-							<div class="border-top pt-5">
-								<p>
-									Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
-									Copyright &copy;
-									2020 All rights reserved | This template is made
-									with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-										target="_blank">Colorlib</a>
-									Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
-								</p>
-							</div>
-						</div>
-					</div> -->
 				</div>
 			</footer>
-		</div> <!-- .site-wrap -->
+		</div>
 		<script src="js/jquery-3.3.1.min.js"></script>
-		<!-- <script src="js/jquery-migrate-3.0.1.min.js"></script> -->
-		<!-- <script src="js/jquery-ui.js"></script> -->
 		<script src="js/popper.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-		<!-- <script src="js/owl.carousel.min.js"></script> -->
-		<!-- <script src="js/jquery.stellar.min.js"></script> -->
-		<!-- <script src="js/jquery.countdown.min.js"></script> -->
-		<!-- <script src="js/bootstrap-datepicker.min.js"></script> -->
 		<script src="js/jquery.easing.1.3.js"></script>
 		<script src="js/aos.js"></script>
-		<!-- <script src="js/jquery.fancybox.min.js"></script> -->
 		<script src="js/jquery.sticky.js"></script>
 		<script src="js/main.js"></script>
 		<script src="js/send-form.js"></script>
